Verson 0.9.2 -

- Automatically read and convert Tree Anarchy data
- Revise overlap detection handling
- Update AlgernonCommons


Version 0.9.1 -

- Adjust overlap detection handling